--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^9.8.6",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.14.1",
+    "postcss-cli": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
@@ -23,10 +25,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1",
-    "typescript": "^4.0.2",
-    "autoprefixer": "^9.8.5",
-    "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.5.1"
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^1.5.1",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "build:style": "tailwind build src/Styles/index.css -o src/Styles/tailwind.css",
