--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "build:style": "tailwind build src/Styles/index.css -o src/Styles/tailwind.css",
-    "start": "tailwind build src/Styles/index.css -o src/Styles/tailwind.css && serve build",
+    "start": "tailwind build src/Styles/index.css -o src/Styles/tailwind.css && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
